fix pour le .exe + fichier log du .exe