@@ -51,7 +51,6 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter")
     // BDD
     implementation("org.postgresql:postgresql:42.7.4")
-    implementation ("org.mindrot:jbcrypt:0.4")
 }
 
 
@@ -68,9 +67,13 @@ jlink {
     jpackage {
         imageName = "CineForAll"
         skipInstaller = true
+        jvmArgs = listOf(
+            "--add-reads", "cinema.app=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+        )
     }
 
-    forceMerge("jbcrypt")
+    forceMerge("postgresql")
 }
 
 tasks.withType<JavaCompile> {
